--- a/src/style.scss
+++ b/src/style.scss
@@ -1,330 +1,99 @@
+@import "./styles/normalize.scss";
 @import "./styles/contact-card.scss";
 
-ul, ol, menu {
-  list-style-type: none;
+main {
+  margin: 0 10px;
 }
 
-.content {
-    position: relative;
-    font-family: 'Nunito', sans-serif;
-    font-weight: 300;
-    color: #3d5358;
-    // max-width: 780px;
-    margin: 0 auto;
-  
-    &__list {
-      position: relative;
-      margin-top: 1rem;
-      padding-right: 1rem;
-      padding-bottom: 5rem;
-      backface-visibility: hidden;
-    }
+.nav-wrapper {
+  // background-color: red;
+}
+
+nav {
+  background-color: #00a7e7;
+  padding: 10px 0;
+  border-bottom: 2px solid #fff;
+}
+
+.dropdown {
+}
+
+.filters {
+  // width: 70%;
+  max-height: 80vh;
+  margin: 10px 0 0 0;
+  padding: 0;
+  list-style: none;
+  color: #fff;
+  background-color: #00a7e7;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.filters__item {
+  padding: 1rem;
+
+  &:hover {
+    background-color: #fff;
+    color: #00a7e7;
   }
-  
-  .company {
-    position: relative;
-    width: calc(100% / 2 - 1rem);
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 1rem;
-    margin-top: 1rem;
-    padding-top: 0.75rem;
-    border-radius: 6px;
-    background-color: white;
-    box-shadow: 0 0 0 1px #c5d0d1;
-    backface-visibility: hidden;
-    transform-origin: 10% 50%;
-    z-index: 1;
-  
-    @media (min-width: 800px) { width: calc(100% / 3 - 1rem) }
-  
-    &-move { transition: all 600ms ease-in-out 50ms }
-    &-enter-active { transition: all 300ms ease-out }
-  
-    &-leave-active {
-      transition: all 200ms ease-in;
-      position: absolute;
-      z-index: 0;
-    }
-  
-    &-enter,
-    &-leave-to { opacity: 0 }
-    &-enter { transform: scale(0.9) }
-  
-    &__data { line-height: 1.3 }
-    &__label { font-size: 0.8rem }
-    &__rating { text-align: center }
-  
-    &__info {
-      padding: 0 0.75rem;
-      text-align: center;
-    }
-  
-    &__logo {
-      width: 3rem;
-      height: 3rem;
-      margin: 0 auto;
-    }
-  
-    &__name {
-      height: 2.5rem;
-      margin: 0.75rem 0;
-      font-size: 1.3rem;
-      font-weight: 200;
-      text-align: center;
-    }
-  
-    &__slogan {
-      height: 2rem;
-      text-align: center;
-      font-weight: 400;
-      text-transform: capitalize;
-    }
-  
-    &__details {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 1.5rem;
-      padding: 0.5rem 0.75rem;
-      background-color: rgba(#c5d0d1, 0.1);
-      border-top: 1px solid #c5d0d1;
-    }
-  
-    &__country:hover {
-      text-decoration: underline;
-      cursor: pointer;
-    }
+}
+
+.btn {
+  border: 2px solid #fff;
+  box-shadow: none;
+  border-radius: 4px;
+  text-shadow: none;
+  padding: 0.3em 1em;
+  background-color: transparent;
+  font-weight: 500;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  margin: 0.3em 1em;
+
+  &:hover {
+    border: 2px solid transparent;
+    background-color: hsla(0, 0%, 100%, 0.2);
   }
-  
-  .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    white-space: nowrap;
-    margin: 0 1rem;
-    padding: 2rem 0.5rem 1rem;
-    border-bottom: 1px solid #c5d0d1;
-  
-    &__controls { display: flex }
-  
-    &__icon {
-      width: 1rem;
-      height: 1rem;
-      fill: currentColor;
-    }
-  
-    &__label {
-      position: relative;
-      margin-left: 1rem;
-      text-transform: capitalize;
-      z-index: 1;
-      cursor: pointer;
-  
-      &::after {
-        content: '\00d7';
-        display: inline-block;
-        color: transparent;
-        width: 0.5rem;
-        font-weight: 400;
-        transform: scale(0);
-        transition: transform 150ms ease-in-out;
-      }
-  
-      &--clear {
-        color: #f68185;
-        opacity: 0;
-        transform: translate3d(-25%, 0, 0);
-        pointer-events: none;
-        transition: all 275ms ease-in-out;
-      }
-  
-      &--filter ~ &--clear {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-        pointer-events: auto;
-      }
-  
-      &--filter::after,
-      &--active::after { transform: scale(1) }
-  
-      &--filter::after {
-        content: '\2022';
-        color: #46d2c4;
-      }
-  
-      &--active::after {
-        content: '\00d7';
-        color: #f68185;
-      }
-    }
+
+  & .btn--dark {
+    color: #00a7e7;
   }
-  
-  .dropdown {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    transition: height 350ms;
-  
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 1rem;
-      background-image: linear-gradient(to top, white, rgba(white, 0));
-    }
-  
-    &-enter,
-    &-leave-to { opacity: 0 }
-  
-    &-leave,
-    &-enter-to { opacity: 1 }
-  
-    &-enter-active,
-    &-leave-active {
-      position: absolute;
-      width: 100%;
-      transition: opacity 200ms ease-in-out;
-    }
-  
-    &-enter-active { transition-delay: 100ms }
+}
+
+.content__list {
+  margin-top: 3em;
+}
+
+/*** Responsive Styles Tablet And Below ***/
+@media all and (max-width: 980px) {
+}
+
+/*** Responsive Styles Smartphone Only ***/
+@media all and (max-width: 767px) {
+  .btn {
+    margin: 0.3em 0.6em;
   }
-  
+
   .filters {
-    padding: 0 1rem;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-  
-    &__item {
-      margin-top: 0.5rem;
-      margin-right: 0.5rem;
-      padding: 0.25rem 0.5rem;
-      border: 1px solid #c5d0d1;
-      border-radius: 6px;
-      font-size: 0.8rem;
-      line-height: 1.35;
-      cursor: pointer;
-      transition: all 275ms;
-  
-      &:hover { border-color: #379a93 }
-  
-      &--active {
-        color: white;
-        border-color: #379a93;
-        background-color: #379a93;
-      }
-    }
-  
-    &__rating {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 1.5rem 0;
-    }
-  
-    &__range {
-      width: 200px;
-      margin-top: 1rem;
-      color: inherit;
-  
-      &::-webkit-slider-thumb {
-        width: 0.8rem;
-        height: 0.8rem;
-        margin-top: calc(-0.4rem + 2px);
-        border-radius: 100%;
-        background-color: currentColor;
-      }
-  
-      &::-webkit-slider-runnable-track {
-        width: 100%;
-        height: 4px;
-        background-image: linear-gradient(to right, white, #46d2c4);
-      }
-    }
+    grid-template-columns: 1fr 1fr 1fr;
   }
-  
-  .modal {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
+}
+
+/*** Responsive Styles Smartphone Portrait ***/
+@media all and (max-width: 479px) {
+  nav {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(white, 0.6);
-    z-index: 1;
-  
-    &-enter-active,
-    &-leave-active { transition: opacity 350ms }
-  
-    &-enter,
-    &-leave-to { opacity: 0 }
-  
-    &-leave,
-    &-enter-to { opacity: 1 }
-  
-    &__content {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 90%;
-      max-width: 500px;
-      min-height: 250px;
-      padding: 1.5rem 1rem;
-      background-color: white;
-      border: 1px solid #c5d0d1;
-      border-radius: 12px;
-      text-align: center;
-      box-shadow: 0 0.5rem 1.75rem -0.25rem rgba(#3d5358, 0.4);
-    }
-  
-    &__title {
-      font-weight: 400;
-      font-size: 1.5rem;
-    }
-  
-    &__link {
-      margin-top: 1.5rem;
-      position: relative;
-      font-size: 1.2rem;
-      font-weight: 300;
-      z-index: 0;
-  
-      &::after {
-        content: '';
-        width: 100%;
-        height: 1px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        background-color: currentColor;
-        z-index: -1;
-        transition: background-color 225ms ease-out;
-      }
-  
-      &:hover::after {
-        background-color: #46d2c4;
-      }
-    }
-  
-    &__close {
-      position: absolute;
-      top: 0.25rem;
-      right: 1rem;
-      font-size: 1.75rem;
-      font-weight: 400;
-      opacity: 0.5;
-      transition: opacity 150ms ease-out;
-  
-      &:hover {
-        opacity: 1;
-      }
-    }
+    justify-content: space-between;
   }
+  .btn {
+    margin: 0.3em 0.3em;
+  }
+
+  .filters {
+    grid-template-columns: 1fr 1fr;
+  }
+}
