--- a/src/styles/contact-card.scss
+++ b/src/styles/contact-card.scss
@@ -1,144 +1,174 @@
-$tablet: 980px;
-$phone-landscape: 767px;
-$phone-portrait: 479px;
+// $tablet: 980px;
+// $phone-landscape: 767px;
+// $phone-portrait: 479px;
 
+.sc_list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  //   margin: -10px 0 0 -10px;
+  padding: 0;
+}
 
 .sc_card {
-    width: 600px;
-    max-width: 600px;
-    position: relative;
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 3em auto 0 auto;
-    padding: 1em;
-    border: 1px solid #ccc;
-
-    &:first-child {
-        margin-top: 0;
-    }
-
-    @media all and (max-width: $tablet) {
-        max-width: 60vw;
-    }
-
-    @media all and (max-width: $phone-landscape) {
-        max-width: 60vw;
-    }
-
-    @media all and (max-width: $phone-portrait) {
-        max-width: 88vw;
-        padding: 1em 0.5em;
-    }
+  width: calc(100% * (1 / 2) - 10px - 1px);
+  //   max-width: 600px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 1;
+  margin: 1.5em auto 0 auto;
+  //   padding: 1em;
+  border: 1px solid #ccc;
 }
 
 .sc_wrapper {
-    width: 100%;
-    height: 100%;
-    z-index: 3;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
 }
 
 .sc_section {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    @media all and (max-width: $phone-landscape) {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        &:first-child {
-            flex-direction: column-reverse;
-        }
-    }
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .sc_user-image {
-    margin: 0;
-
-    img {
-        max-width: 200px;
-        background-color: #fff;
-    }
+  margin: 0;
+  img {
+    max-width: 200px;
+    background-color: #fff;
+  }
 }
 
 .sc_userinfo {
-    flex-grow: 1;
-    padding: 1em;
-
-    @media all and (max-width: $phone-landscape) {
-        text-align: center;
-    }
+  flex-grow: 1;
+  padding: 1em;
 }
 
 .sc_country {
-    font-size: 1.2em;
-    color: #00a7e7;
+  font-size: 1.2em;
+  color: #00a7e7;
 }
 
 .sc_name {
-    font-size: 1.5em;
-    font-weight: bold;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .sc_details {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin: 1em;
-
-    @media all and (max-width: $phone-portrait) {
-        margin: 1em 0; 
-    }
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin: 1em;
 }
 
 .sc_detail-item {
-    margin: 0.5em 1em;
-
-    @media all and (max-width: $phone-portrait) {
-        margin: 0.5em;
-    }
-
-    span {
-        font-weight: bold;
-    }
+  margin: 0.5em 1em;
+  span {
+    font-weight: bold;
+  }
 }
 
 .sc_qrcode {
-    margin: .5em;
-
-    @media all and (max-width: $phone-portrait) {
-        display: none;
-    }
-
-    img,
-    canvas {
-        padding: .5em;
-        width: 100%;
-        max-width: 175px;
-        background-color: #ffffff;
-    }
+  margin: 1em;
+  img {
+    width: 100%;
+    max-width: 150px;
+  }
 }
 
 .sc-button {
-    display: none;
-
-    @media all and (max-width: $phone-portrait) {
-        display: block;
-    }
+  display: none;
 }
 
 .sc_card-oblique {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  background-image: -webkit-linear-gradient(
+    -27deg,
+    #ffffff 74.6%,
+    #00a7e7 26.4%
+  );
+  background-color: #fff;
+}
+
+.sc_select {
+  height: 3em;
+  border: 0 none;
+  padding: 0 10px;
+  background: #fff;
+  border: 1px solid #ccc;
+  transition: 0.2s ease-in-out;
+  transition-property: color, background-color, border;
+  outline: none;
+}
+
+option:checked {
+  background-color: #00a7e7;
+  color: #fff;
+}
+
+/*** Responsive Styles Tablet And Below ***/
+@media all and (max-width: 980px) {
+  .sc_card {
+    width: calc(100% * (1 / 1) - 10px - 1px);
+  }
+}
+
+/*** Responsive Styles Smartphone Only ***/
+@media all and (max-width: 767px) {
+  .sc_card {
+    max-width: 60vw;
+  }
+
+  .sc_container {
     z-index: 1;
-    background-image: -webkit-linear-gradient(-27deg,
-            #ffffff 74.6%,
-            #00a7e7 26.4%);
-    background-color: #fff;
+  }
+
+  .sc_section {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .sc_section:first-child {
+    flex-direction: column-reverse;
+  }
+
+  .sc_userinfo {
+    text-align: center;
+  }
+}
+
+/*** Responsive Styles Smartphone Portrait ***/
+@media all and (max-width: 479px) {
+  .sc_card {
+    max-width: 88vw;
+    padding: 1em 0.5em;
+  }
+
+  .sc_details {
+    margin: 1em 0;
+  }
+
+  .sc_detail-item {
+    margin: 0.5em;
+  }
+
+  .sc_qrcode {
+    display: none;
+  }
+
+  .sc-button {
+    display: block;
+  }
 }
