--- a/src/styles/contact-card.scss
+++ b/src/styles/contact-card.scss
@@ -75,10 +75,15 @@
 }
 
 .sc_qrcode {
+  padding: 0.6em;
   margin: 1em;
-  img {
+  background-color: #fff;
+  canvas {
     width: 100%;
-    max-width: 150px;
+    max-width: 190px;
+    height: 100%;
+    max-height: 190px;
+    vertical-align: middle;
   }
 }
 
@@ -118,16 +123,35 @@ option:checked {
 }
 
 /*** Responsive Styles Tablet And Below ***/
+@media all and (max-width: 1200px) {
+  .sc_qrcode {
+    canvas {
+      max-width: 130px;
+      max-height: 130px;
+    }
+  }
+}
+
+/*** Responsive Styles Tablet And Below ***/
 @media all and (max-width: 980px) {
+  .sc_qrcode {
+    canvas {
+      max-width: 190px;
+      max-height: 190px;
+    }
+  }
+
   .sc_card {
-    width: calc(100% * (1 / 1) - 10px - 1px);
+    width: calc(100% * (1 / 1) - 10px - 20%);
   }
 }
 
 /*** Responsive Styles Smartphone Only ***/
 @media all and (max-width: 767px) {
   .sc_card {
-    max-width: 60vw;
+    .sc_card {
+      width: calc(100% * (1 / 1) - 10px - 20%);
+    }
   }
 
   .sc_container {
