add continent-contact-filter; reduce complexity

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,10 @@
 @import "./styles/normalize.scss";
 @import "./styles/contact-card.scss";
 
+body {
+  font-family: "Open Sans", Arial, sans-serif;
+}
+
 main {
   margin: 0 10px;
 }
