--- a/src/style.scss
+++ b/src/style.scss
@@ -56,6 +56,7 @@ main {
     position: relative;
     border-left: 1px solid $lawo-color-light;
     border-right: 1px solid $lawo-color-dark;
+    text-transform: capitalize;
 
     &::after {
       content: "\00d7";
