--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,6 +1,6 @@
 // $tablet: 980px;
 // $phone-landscape: 767px;
 // $phone-portrait: 479px;
-$lawo-color-dark: #0084b7;
+$lawo-color-dark: #0078ad;
 $lawo-color-light: #33b9ec;
 $lawo-color-normal: #00a7e7;
