--- a/src/style.scss
+++ b/src/style.scss
@@ -51,9 +51,18 @@ main {
     border-left: 1px solid $lawo-color-light;
     border-right: 1px solid $lawo-color-dark;
     text-transform: capitalize;
+    position: relative;
 
     &:last-child {
-      justify-content: flex-end;
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: -2px;
+        width: 1px;
+        background-color: $lawo-color-light;
+      }
     }
 
     &--clear {
