--- a/src/style.scss
+++ b/src/style.scss
@@ -4,31 +4,44 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+  -webkit-user-select: none;
+  /* Safari */
+  -ms-user-select: none;
+  /* IE 10 and IE 11 */
+  user-select: none;
+  /* Standard syntax */
 }
 
-main {
+
+#app__sales-contacts {
+  * {
+    box-sizing: initial;
+  }
+
+  ul {
+    padding: 0;
+  }
+
+  .nav {
+    display: flex;
+    background-color: $lawo-color-normal;
+
+    figure {
+      padding: 1em 1.2em 1em 1.2em;
+      margin: 0;
+      border-right: 1px solid $lawo-color-dark;
+  
+      img {
+        display: flex;
+        align-items: center;
+        width: 2em;
+        height: 2em;
+      }
+    }
+  }
 }
 
 .nav {
-  display: flex;
-  background-color: $lawo-color-normal;
-
-  figure {
-    padding: 1em 1.2em 1em 1.2em;
-    margin: 0;
-    border-right: 1px solid $lawo-color-dark;
-
-    img {
-      display: flex;
-      align-items: center;
-      width: 2em;
-      height: 2em;
-    }
-  }
-
   &__controls {
     display: flex;
   }
@@ -71,7 +84,7 @@ main {
       transition: all 275ms ease-in-out;
     }
 
-    &--filter ~ &--clear {
+    &--filter~&--clear {
       opacity: 1;
       transform: translate3d(0, 0, 0);
       pointer-events: auto;
@@ -189,8 +202,7 @@ main {
 }
 
 /*** Responsive Styles Tablet And Below ***/
-@media all and (max-width: 980px) {
-}
+@media all and (max-width: 980px) {}
 
 /*** Responsive Styles Smartphone Only ***/
 @media all and (max-width: 767px) {
@@ -209,6 +221,7 @@ main {
     display: flex;
     justify-content: space-between;
   }
+
   .btn {
     margin: 0.3em 0.3em;
   }
