--- a/src/style.scss
+++ b/src/style.scss
@@ -155,6 +155,65 @@ body {
       }
     }
   }
+  &__info {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    // figure {
+    //   background-color: $lawo-color-normal;
+    //   padding: 1em 1.2em 1em 1.2em;
+    //   margin: 0;
+    //   border-right: 1px solid #0078ad;
+    //   img {
+    //     display: flex;
+    //     align-items: center;
+    //     width: 2em;
+    //     height: 2em;
+    //   }
+
+    //   &:after {
+    //     content: "";
+    //     position: absolute;
+    //     top: 0;
+    //     bottom: 0;
+    //     right: -2px;
+    //     width: 1px;
+    //     background-color: #33b9ec;
+    //   }
+    // }
+    p {
+      position: relative;
+      background-color: $lawo-color-normal;
+      font-size: 1.2em;
+      color: #fff;
+      padding: 1em 1.2em 1em 3.2em;
+
+      &:before {
+        content: "";
+        background-color: #00a7e7;
+        position: absolute;
+        top: 0.8em;
+        bottom: 0;
+        left: 0.8em;
+        background-image: url("wp-content/plugins/lawo-api-client/images/top.svg");
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 1.6em;
+        height: 1.6em;
+      }
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 1px;
+        background-color: $lawo-color-light;
+      }
+    }
+  }
 }
 
 .dropdown {
@@ -211,6 +270,16 @@ body {
 
   .filters {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media all and (max-width: 634px) {
+  .filters__info {
+    p {
+      &:before {
+        top: 1.2em;
+      }
+    }
   }
 }
 
