--- a/src/styles/contact-card.scss
+++ b/src/styles/contact-card.scss
@@ -45,10 +45,10 @@
     margin: 0;
 
     img {
-      max-width: 120px;
+      max-width: 140px;
       background-color: #fff;
       aspect-ratio: 3/4;
-      margin: 20px 0 0 30px;
+      margin: 20px 0 0 15px;
     }
   }
 
@@ -77,7 +77,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin: 1em 0 1em 1em;
+    margin: 1em 0 1em 0;
 
     .sc_detail-item {
       display: flex;
